Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26911

QFtp's _q_parseUnixDir can't parse dates on leap years

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.8.3
    • Some future release
    • Network: FTP
    • None
    • d36f83d319823e9c9a4fd939b12e17223413474e (4.8)

    Description

      This year is a leap year, which is why we found the bug this year. When we issue a QFtp::list then the QFtp::listInfo signal will not always return us QUrlInfo entries that yield true for info.lastModified().isValid().

      I have attached a program where I copy-pasted the function in qftp.cpp that is responsible for the bug. I pass that function a line that can possibly come from an FTP server the 29th of February on a leap year (like this year, 2012). The function returns with a QUrlInfo where lastModified isn't valid. As illustrated in the test program.

      I will attach a possible patch to fix this issue afterward.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              shkearns Shane Kearns
              philipvh Philip Van Hoof
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes