Parse yearless date strings on leap years during LIST in QFtp

Adapted _q_parseUnixDir to handle yearless date strings during
a leap year while performing LIST.

Task-number: QTBUG-26911
Change-Id: I3193400a274a896530d45de986ec8fa5b159abb4
Reviewed-by: Shane Kearns <shane.kearns@accenture.com>
Reviewed-by: Philip Van Hoof <philip@codeminded.be>